plugins {
    id 'org.springframework.boot' version '3.2.2'
    id 'io.spring.dependency-management' version '1.1.4'
    id 'java'
}

group = 'com.blankfactor'
version = '0.0.1-SNAPSHOT'

java.sourceCompatibility = '17'

bootRun {
    environment SPRING_PROFILES_ACTIVE: environment.SPRING_PROFILES_ACTIVE ?: 'local'
}

repositories {
    mavenCentral()
}

dependencies {
    //Spring Boot
    implementation('org.springframework.boot:spring-boot-starter-web')
    implementation('org.springframework.boot:spring-boot-starter-validation')
    implementation('org.springframework.boot:spring-boot-starter-data-jpa')
    implementation ('org.springframework.boot:spring-boot-starter-actuator')
    developmentOnly('org.springframework.boot:spring-boot-devtools')
    testImplementation('org.springframework.boot:spring-boot-starter-test')
    //Security
    implementation('org.springframework.boot:spring-boot-starter-security')
    //JSON Web Token
    implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.3'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.3'
    //Utils
    implementation('com.google.guava:guava:32.0.0-android')
    //MapStruct
    implementation('org.mapstruct:mapstruct:1.5.5.Final')
    annotationProcessor ('org.mapstruct:mapstruct-processor:1.5.5.Final')
    //Database
    runtimeOnly('com.h2database:h2')
    //Documentation
    implementation('org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0')
    //QrCode
    implementation('net.glxn:qrgen:1.4')
    //Lombok
    compileOnly('org.projectlombok:lombok')
    annotationProcessor('org.projectlombok:lombok')
    testCompileOnly('org.projectlombok:lombok')
    testAnnotationProcessor('org.projectlombok:lombok')

}

tasks.withType(Test).configureEach {
    useJUnitPlatform()
}
